--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "th",
   "productName": "TH",
   "version": "0.1.0",
-  "main": "engine/electron/index.js",
+  "main": "./engine/electron/index.js",
   "description": "A description of your game",
   "author": "Adam W. Telford",
   "license": "MIT",
